add google analysis code

--- a/template/freelancer/common/base.html
+++ b/template/freelancer/common/base.html
@@ -288,6 +288,15 @@
               s.parentNode.insertBefore(hm, s);
             })();
             </script>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-JZ81SEB2BH"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-JZ81SEB2BH');
+        </script>
             
         {% endblock footer %}
     </body>
