added ads.txt to support google adsense verification

--- a/template/freelancer/common/base.html
+++ b/template/freelancer/common/base.html
@@ -14,6 +14,8 @@
         <link rel="stylesheet" href="/static/tmpl/freelancer/css/heading.css">
         <link rel="stylesheet" href="/static/tmpl/freelancer/css/body.css">
         <link rel="stylesheet" href="/static/com/share/css/share.css">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9987237856136349"
+                crossorigin="anonymous"></script>
         {% endblock head %}
     </head>
     <body id="page-top">
