migrated from Aliyun to Cloudflare

--- a/template/freelancer/common/base_cn.html
+++ b/template/freelancer/common/base_cn.html
@@ -198,7 +198,7 @@
             <div class="container">
                 <small class="pre-wrap">
                     本网站采用<a href="https://edu.51cto.com/sd/eed8c" target="_blank">Rust语言</a>开发,源码在<a href="https://github.com/TianLangStudio/rust_cms"  target="_blank">Github</a>上<br/>
-                    服务器由<a href="https://www.aliyun.com/minisite/goods?userCode=qtg5vupa" target="_blank">阿里云</a>提供<br/>                     
+                    <!--服务器由<a href="https://www.aliyun.com/minisite/goods?userCode=qtg5vupa" target="_blank">阿里云</a>提供<br/>  -->
                      Copyright ©2020-2030 <br/>
                      <div style="width:300px;margin:0 auto; padding:20px 0;">
                         <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=44030702003166" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="/static/img/beian.png" style="float:left;"/><p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#939393;">粤公网安备 44030702003166号</p></a>
