added api for generating sitemap.xml

--- a/static/tmpl/freelancer/css/styles.css
+++ b/static/tmpl/freelancer/css/styles.css
@@ -10018,7 +10018,7 @@ h3 {
   padding-bottom: 6rem;
 }
 .masthead .masthead-heading {
-  font-size: 2.75rem;
+  font-size: 2.58rem;
   line-height: 2.75rem;
 }
 .masthead .masthead-subheading {
@@ -10036,7 +10036,7 @@ h3 {
     background-size: 100% 100%;
   }
   .masthead .masthead-heading {
-    font-size: 2rem;
+    font-size: 2.88rem;
     line-height: 3.5rem;
   }
   .masthead .masthead-subheading {
@@ -10055,7 +10055,7 @@ h3 {
   padding: 18px;
 }
 .portfolio-item .article-title {
-  font-size: xx-large;
+  font-size: large;
   font-weight: bolder;
 }
 .portfolio-item .article-subtitle {
