--- a/template/freelancer/index.html
+++ b/template/freelancer/index.html
@@ -15,7 +15,7 @@
     <div class="container d-flex align-items-right flex-column">
         <!-- Masthead Avatar Image--><!--img class="masthead-avatar mb-5" src="/static/tmpl/freelancer/assets/img/avataaars.svg" alt=""-->
         <!-- Masthead Heading-->
-        <h5 class="masthead-heading mb-0">Fusion Zhu@TianLang Studio </h5>
+        <div class="masthead-heading mb-0">Fusion Zhu@TianLangStudio </div>
         <!-- Icon Divider-->
         <div class="divider-custom divider-light">
             <div class="divider-custom-line"></div>
