--- a/template/freelancer/common/base_cn.html
+++ b/template/freelancer/common/base_cn.html
@@ -21,7 +21,7 @@
     <body id="page-top">
         {% block nav %}
         <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
-            <div class="container"><a class="navbar-brand js-scroll-trigger" href="#page-top">天朗工作室</a>
+            <div class="container"><a class="navbar-brand js-scroll-trigger" href="/#page-top">天朗工作室</a>
                 <button class="navbar-toggler navbar-toggler-right font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
