updated dependencies to the last version

--- a/template/freelancer/common/base.html
+++ b/template/freelancer/common/base.html
@@ -194,7 +194,7 @@
         <section class="copyright py-4 text-center text-white">
             <div class="container">
                 <small class="pre-wrap">
-                    Developed with <a href="https://edu.51cto.com/sd/eed8c" target="_blank">Rust</a>, Open source on <a href="https://github.com/TianLangStudio/rust_cms"  target="_blank">Github</a>上<br/>
+                    Developed with <a href="https://edu.51cto.com/sd/eed8c" target="_blank">Rust</a>, Open source on <a href="https://github.com/TianLangStudio/rust_cms"  target="_blank">Github</a><br/>
                     <!--Server provided by <a href="https://www.aliyun.com/minisite/goods?userCode=qtg5vupa" target="_blank">Ali Cloud</a><br/>-->
                      Copyright ©2020-2030 <br/>
                      <div style="width:300px;margin:0 auto; padding:20px 0;">
