Added test for signed_password

--- a/template/freelancer/articles.html
+++ b/template/freelancer/articles.html
@@ -34,9 +34,9 @@
           </a>
           <p class="post-meta">
             <a href="#">{{article.creater}}</a>
-             发布于{{article.create_at|date(format="%Y年%m月%d日%H:%M")}}
+             {{article.create_at | safe}}
              {% if  article.creater == username %} 
-                    <a target="_blank" href="/article/admin/edit/{{article.id}}">编辑</a>
+                    <a target="_blank" href="/article/admin/edit/{{article.id}}">Edit</a>
              {% endif %}
           </p>
         </div>
